--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -15,14 +15,8 @@
     <span>
       <h1>
         <!-- logo -->
-        <span class="logo">S E N S U S</span>
-        <br/>
-        <!-- new mood post -->
-        <a href class="headerlink"="#">POST YOUR MOOD</a> |
-        <!-- see all mood posts -->
-        <a href class="headerlink"="#">SEE YOUR MOODS</a> |
-        <!-- D3 Mood Chart -->
-        <a href class="headerlink"="#">MOOD CHART</a>
+        <span class="logo">S E N S U S</span><br/>
+        <h3>Visualize Your Moods</h3>
   </header>
   </nav>
 
