--- a/app/views/layouts/angular.html.erb
+++ b/app/views/layouts/angular.html.erb
@@ -8,11 +8,8 @@
   <meta charset="utf-8">  <!-- it's important for d3.js -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/d3/d3.js"></script>
-  <script src="bower_components/nvd3/nv.d3.js"></script> <!-- or use another assembly -->
-  <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
-  <link rel="stylesheet" href="bower_components/nvd3/nv.d3.css">
+  <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  
 
   <base href="/"> </base>
 
