LOTS of style changes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,8 @@
 
 body {
   background: #FFFBEA;
+  margin-left: 50px !important;
+  margin-right: 50px !important;
 }
 
 /* LOGIN ACCEPTED STYLING */
@@ -41,8 +43,6 @@ div.flash {
   padding: 1rem;
   background: #6dd4b1;
 }
-
-
 
 /* HEADER AND NAV */
 header {
@@ -75,7 +75,10 @@ header {
 
 .navbar {
   font-family: 'Abel', sans-serif;
-  margin-bottom: 1em;
+}
+
+nav {
+  margin-bottom: 50px;
 }
 
 
@@ -167,6 +170,10 @@ input[type=radio] {
   background: #6dd4b1;
 }
 
+.emojishow1 {
+  background: #357099;
+}
+
 
 
 /* STYLING OF EMOJIS THROUGHOUT */
@@ -183,12 +190,16 @@ input[type=radio] {
 /* STYLING OF MOOD & FACTORS POSTS*/
 #emoji {
   margin-bottom: 20px;
-  border: 1px solid #6dd4b1;
+  border: 1px solid transparent;
   border-radius: 5px;
-  height: 250px;
-  width: 250px;
+  height: 200px;
+  width: 300px;
   text-align: center;
   padding-top: 1em;
   display: inline-block;
   margin-right: 10px;
+}
+
+#date {
+  font-family: 'Open Sans', sans-serif;
 }
