--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -6,7 +6,7 @@
   <%= csrf_meta_tags %>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
-
+  <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 </head>
 <body>
 
