testing various image relative urls to get images to load

--- a/public/angular_templates/form.html.erb
+++ b/public/angular_templates/form.html.erb
@@ -19,7 +19,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood one"
            for="one">
-       <%= image_tag("1.png") %>
+       <%= image_tag "1.png" %>
 <!--         <img src="assets/1.png"/> -->
     </label>
 
@@ -34,7 +34,7 @@
     <label class="mood two"
            for="two">
 <!--       <img src="assets/2.png"/> -->
-       <%= image_tag("2.png") %>
+       <%= image_tag "2.png" %>
     </label>
 
 
@@ -47,7 +47,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood three"
            for="three">
-     <%= image_tag("2.png") %>
+     <%= image_tag "3.png" %>
 <!--       <img src="assets/3.png"/>-->    
     </label>
 
@@ -60,7 +60,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood four"
            for="four">
-            <%= image_tag("4.png") %>
+          <%= image_tag("4.png") %>
 <!--       <img src="assets/4.png"/>
  -->    </label>
 
@@ -88,7 +88,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood six"
            for="six">
-      <img src="assets/6.png"/>
+      <%= image_tag("6.png") %>     
+<!--       <img src="assets/6.png"/> -->
     </label>
 
 
@@ -101,7 +102,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood seven"
            for="seven">
-      <img src="assets/7.png"/>
+      <%= image_tag("7.png") %>     
+  <!--     <img src="assets/7.png"/> -->
     </label>
 
 
@@ -114,7 +116,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood eight"
            for="eight">
-      <img src="assets/8.png"/>
+      <%= image_tag("8.png") %>     
+<!--       <img src="assets/8.png"/>-->    
     </label>
 
 
@@ -127,7 +130,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood nine"
            for="nine">
-      <img src="assets/9.png"/>
+      <%= image_tag("9.png") %>     
+<!--       <img src="assets/9.png"/> -->    
     </label>
 
 
@@ -141,8 +145,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood ten"
            for="ten">
-      <img src="assets/10.png"/>
-
+      <%= image_tag("10.png") %>     
+<!--       <img src="assets/10.png"/> -->
     </label>
     <br/>
     <br/>
