updated all image tags to be standard erb image_tag

--- a/public/angular_templates/form.html.erb
+++ b/public/angular_templates/form.html.erb
@@ -60,7 +60,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood four"
            for="four">
-          <%= image_tag("4.png") %>
+          <%= image_tag "4.png" %>
 <!--       <img src="assets/4.png"/>
  -->    </label>
 
@@ -74,7 +74,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood five"
            for="five">
-       <%= image_tag("5.png") %>     
+       <%= image_tag "5.png" %>     
 <!--       <img src="assets/5.png"/>
  -->    </label>
 
@@ -88,7 +88,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood six"
            for="six">
-      <%= image_tag("6.png") %>     
+      <%= image_tag "6.png" %>     
 <!--       <img src="assets/6.png"/> -->
     </label>
 
@@ -102,7 +102,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood seven"
            for="seven">
-      <%= image_tag("7.png") %>     
+      <%= image_tag "7.png" %>     
   <!--     <img src="assets/7.png"/> -->
     </label>
 
@@ -116,7 +116,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood eight"
            for="eight">
-      <%= image_tag("8.png") %>     
+      <%= image_tag "8.png" %>     
 <!--       <img src="assets/8.png"/>-->    
     </label>
 
@@ -130,7 +130,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood nine"
            for="nine">
-      <%= image_tag("9.png") %>     
+      <%= image_tag "9.png" %>     
 <!--       <img src="assets/9.png"/> -->    
     </label>
 
@@ -145,7 +145,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood ten"
            for="ten">
-      <%= image_tag("10.png") %>     
+      <%= image_tag "10.png" %>     
 <!--       <img src="assets/10.png"/> -->
     </label>
     <br/>
