--- a/public/angular_templates/moods.html.erb
+++ b/public/angular_templates/moods.html.erb
@@ -21,28 +21,28 @@
      <!-- one -->
      <span ng-show="m.happiness==1"
            class="emojishow">
-           <%= image_tag("./app/assets/images/1.png") %>
+           <%= image_tag "1.png" %>
  <!--        <img src="assets/1.png"/>
  -->     </span>
 
      <!-- two -->
      <span ng-show="m.happiness==2"
            class="emojishow">
-           <%= image_tag("images/2.png") %>
+           <%= image_tag "2.png" %>
  <!--       <img src="assets/2.png"/>
  -->     </span>
 
       <!-- three -->
       <span ng-show="m.happiness==3"
             class="emojishow">
-            <%= image_tag("assets/3.png") %>
+            <%= image_tag "3.png" %>
  <!--        <img src="assets/3.png"/>
  -->      </span>
 
       <!-- four -->
       <span ng-show="m.happiness==4"
             class="emojishow">
-            <%= image_tag "assets/images/4.png" %>
+            <%= image_tag "4.png" %>
   <!--       <img src="assets/4.png"/>
   -->     </span>
 
