--- a/public/angular_templates/form.html.erb
+++ b/public/angular_templates/form.html.erb
@@ -19,9 +19,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood one"
            for="one">
-       <%= image_tag "1.png" %>
-<!--         <img src="assets/1.png"/> -->
-    </label>
+<!--        <%= image_tag "1.png" %>-->
+         <img src="images/1.png"/>
 
 
 <!-- two -->
@@ -33,8 +32,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood two"
            for="two">
-<!--       <img src="assets/2.png"/> -->
-       <%= image_tag "2.png" %>
+      <img src="images/2.png"/>
+      <!--  <%= image_tag "2.png" %> -->
     </label>
 
 
@@ -47,8 +46,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood three"
            for="three">
-     <%= image_tag "3.png" %>
-<!--       <img src="assets/3.png"/>-->    
+    <!--  <%= image_tag "3.png" %> -->
+       <img src="images/3.png"/>    
     </label>
 
 <!-- four -->
@@ -60,9 +59,9 @@
            ng-model = "mood.happiness"/>
     <label class="mood four"
            for="four">
-          <%= image_tag "4.png" %>
-<!--       <img src="assets/4.png"/>
- -->    </label>
+      <!--     <%= image_tag "4.png" %> -->
+      <img src="images/4.png"/>
+    </label>
 
 
 <!-- five -->
@@ -74,9 +73,9 @@
            ng-model = "mood.happiness"/>
     <label class="mood five"
            for="five">
-       <%= image_tag "5.png" %>     
-<!--       <img src="assets/5.png"/>
- -->    </label>
+ <!--       <%= image_tag "5.png" %>   -->   
+      <img src="images/5.png"/>
+    </label>
 
 
 <!-- six -->
@@ -88,8 +87,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood six"
            for="six">
-      <%= image_tag "6.png" %>     
-<!--       <img src="assets/6.png"/> -->
+     <!--  <%= image_tag "6.png" %>    -->  
+      <img src="images/6.png"/>
     </label>
 
 
@@ -102,8 +101,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood seven"
            for="seven">
-      <%= image_tag "7.png" %>     
-  <!--     <img src="assets/7.png"/> -->
+    <!--   <%= image_tag "7.png" %>    -->  
+      <img src="images/7.png"/>
     </label>
 
 
@@ -116,8 +115,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood eight"
            for="eight">
-      <%= image_tag "8.png" %>     
-<!--       <img src="assets/8.png"/>-->    
+<!--       <%= image_tag "8.png" %>     
+ -->       <img src="images/8.png"/>    
     </label>
 
 
@@ -130,8 +129,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood nine"
            for="nine">
-      <%= image_tag "9.png" %>     
-<!--       <img src="assets/9.png"/> -->    
+     <!--  <%= image_tag "9.png" %> -->     
+      <img src="images/9.png"/>    
     </label>
 
 
@@ -145,8 +144,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood ten"
            for="ten">
-      <%= image_tag "10.png" %>     
-<!--       <img src="assets/10.png"/> -->
+ <!--      <%= image_tag "10.png" %>   -->   
+      <img src="images/10.png"/>
     </label>
     <br/>
     <br/>
