--- a/public/angular_templates/moods.html.erb
+++ b/public/angular_templates/moods.html.erb
@@ -21,71 +21,71 @@
      <!-- one -->
      <span ng-show="m.happiness==1"
            class="emojishow">
-           <%= image_tag "1.png" %>
- <!--        <img src="assets/1.png"/>
- -->     </span>
+<!--            <%= image_tag "1.png" %> -->
+        <img src="images/1.png"/>
+     </span>
 
      <!-- two -->
      <span ng-show="m.happiness==2"
            class="emojishow">
-           <%= image_tag "2.png" %>
- <!--       <img src="assets/2.png"/>
- -->     </span>
+<!--            <%= image_tag "2.png" %>
+ -->       <img src="images/2.png"/>
+     </span>
 
       <!-- three -->
       <span ng-show="m.happiness==3"
             class="emojishow">
-            <%= image_tag "3.png" %>
- <!--        <img src="assets/3.png"/>
- -->      </span>
+<!--             <%= image_tag "3.png" %>
+ -->        <img src="images/3.png"/>
+      </span>
 
       <!-- four -->
       <span ng-show="m.happiness==4"
             class="emojishow">
-            <%= image_tag "4.png" %>
-  <!--       <img src="assets/4.png"/>
-  -->     </span>
+          <!--   <%= image_tag "4.png" %> -->
+        <img src="images/4.png"/>
+      </span>
 
       <!-- five -->
       <span ng-show="m.happiness==5"
             class="emojishow">
-            <%= image_tag "5.png"  %>
-<!--         <img src="assets/5.png"/>
- -->      </span>
+         <!--    <%= image_tag "5.png"  %> -->
+        <img src="images/5.png"/>
+      </span>
 
       <!-- six -->
       <span ng-show="m.happiness==6"
             class="emojishow">
-            <%= image_tag "6.png" %> 
-      <!--   <img src="assets/6.png"/> -->
+         <!--    <%= image_tag "6.png" %>  -->
+        <img src="images/6.png"/>
       </span>
 
       <!-- seven -->
       <span ng-show="m.happiness==7"
             class="emojishow">
-        <%= image_tag "7.png" %> 
-    <!--     <img src="assets/7.png"/> -->
+<!--         <%= image_tag "7.png" %>  -->
+        <img src="images/7.png"/>
       </span>
 
       <!-- eight -->
       <span ng-show="m.happiness==8"
             class="emojishow">
-         <%= image_tag "8.png" %> 
-        <!--  <img src="assets/8.png"/> -->
+<!--          <%= image_tag "8.png" %> --> 
+         <img src="images/8.png"/>
       </span>
 
       <!-- nine -->
       <span ng-show="m.happiness==9"
             class="emojishow">
-        <%= image_tag "9.png" %> -->
-       <!--  <img src="assets/9.png"/> -->
+<!--         <%= image_tag "9.png" %> --> -->
+        <img src="images/9.png"/>
       </span>
 
       <!-- ten -->
       <span ng-show="m.happiness==10"
             class="emojishow">
-         <%= image_tag "10.png" %> 
-         <!-- <img src="assets/10.png"/> -->
+        <!--  <%= image_tag "10.png" %>  -->
+         <img src="images/10.png"/>
       </span>
 
 
