removed the non working erb image tags

--- a/public/angular_templates/form.html.erb
+++ b/public/angular_templates/form.html.erb
@@ -19,8 +19,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood one"
            for="one">
-<!--        <%= image_tag "1.png" %>-->
          <img src="images/1.png"/>
+    </label>
 
 
 <!-- two -->
@@ -33,7 +33,6 @@
     <label class="mood two"
            for="two">
       <img src="images/2.png"/>
-      <!--  <%= image_tag "2.png" %> -->
     </label>
 
 
@@ -46,7 +45,6 @@
            ng-model = "mood.happiness"/>
     <label class="mood three"
            for="three">
-    <!--  <%= image_tag "3.png" %> -->
        <img src="images/3.png"/>    
     </label>
 
@@ -59,7 +57,6 @@
            ng-model = "mood.happiness"/>
     <label class="mood four"
            for="four">
-      <!--     <%= image_tag "4.png" %> -->
       <img src="images/4.png"/>
     </label>
 
@@ -73,7 +70,6 @@
            ng-model = "mood.happiness"/>
     <label class="mood five"
            for="five">
- <!--       <%= image_tag "5.png" %>   -->   
       <img src="images/5.png"/>
     </label>
 
