--- a/public/angular_templates/moods.html.erb
+++ b/public/angular_templates/moods.html.erb
@@ -14,7 +14,7 @@
 
 
      <!-- POST DATE -->
-     <span>Posted: <a ng-href="/moods/{{m.id}}">{{m.created_at | date:'MM/dd/yyyy @ h:mma'}}</a></span>
+     <span>Posted: <a ng-href="/moods/{{m.id}}" ng-click="showMood(mood)">{{m.created_at | date:'MM/dd/yyyy @ h:mma'}}</a></span>
 
 
      <!-- EMOJIS -->
@@ -70,7 +70,7 @@
       <!-- eight -->
       <span ng-show="m.happiness==8"
             class="emojishow">
-<!--          <%= image_tag "8.png" %> --> 
+<!--          <%= image_tag "8.png" %> -->
          <img src="images/8.png"/>
       </span>
 
@@ -93,5 +93,6 @@
       <span ng-repeat="factor in m.factors">
         <h4>"{{factor.blurb}}"</h4>
       </span>
+      <span><button ng-click="deleteMood()">DELETE</button></span>
 </div>
 </div>
