delete button complete

--- a/public/angular_templates/moods.html.erb
+++ b/public/angular_templates/moods.html.erb
@@ -1,3 +1,4 @@
+<div ng-controller="MoodController as mood">
 <div id = "showall">
 <div id="emoji"
      ng-repeat="m in mood.current_user_moods | orderBy: '-created_at'"
@@ -14,7 +15,7 @@
 
 
      <!-- POST DATE -->
-     <span>Posted: <a ng-href="/moods/{{m.id}}" ng-click="showMood(mood)">{{m.created_at | date:'MM/dd/yyyy @ h:mma'}}</a></span>
+     <span>Posted: {{m.created_at | date:'MM/dd/yyyy @ h:mma'}}</span>
 
 
      <!-- EMOJIS -->
@@ -84,6 +85,7 @@
       <span ng-repeat="factor in m.factors">
         <h4>"{{factor.blurb}}"</h4>
       </span>
-      <span><button ng-click="deleteMood()">DELETE</button></span>
+      <a class="btn" ng-click="mood.deleteMood(m)">Delete</a><br>
+</div><br/>
 </div>
 </div>
