commenting out kelvin to far to see if it works

--- a/public/angular_templates/form.html.erb
+++ b/public/angular_templates/form.html.erb
@@ -214,7 +214,7 @@
    <button ng-click="ctrl.getWeather()">Get Weather</button>
        <h2>Current Weather For: {{ctrl.weather.name}}</h2>
           <h4>Description: {{ctrl.weather.weather[0].description}}</h4>
-          <h4>Temp: {{ctrl.weather.main.temp | kelvinToFar | number:1}} &deg; F / {{ctrl.weather.main.temp | kelvinToCelsius | number:1}} &deg; C </h4>
+          <h4>Temp: <!-- {{ctrl.weather.main.temp | kelvinToFar | number:1}} &deg; F / --> {{ctrl.weather.main.temp | kelvinToCelsius | number:1}} &deg; C </h4>
           <h4>Humidity: {{ctrl.weather.main.humidity}} %</h4>
           <h4>Pressure: {{ctrl.weather.main.pressure}} hpa </h4>
 
