--- a/public/angular_templates/moods.html.erb
+++ b/public/angular_templates/moods.html.erb
@@ -83,5 +83,8 @@
       <span ng-repeat="factor in m.factors">
         <h4>"{{factor.blurb}}"</h4>
       </span>
+       <a class="btn" ng-click="mood.deleteMood(m)">Delete</a><br>
+  </div>
+  <br/>
 </div>
 </div>
