commenting out weather

--- a/public/angular_templates/form.html.erb
+++ b/public/angular_templates/form.html.erb
@@ -206,7 +206,7 @@
 
 <!-- Weather API Area -->
 
-<div ng-controller="WeatherCtrl as ctrl">
+<!-- <div ng-controller="WeatherCtrl as ctrl">
   <input  type="text"
           placeholder="enter your city"
           ng-model="ctrl.city"
@@ -218,4 +218,4 @@
           <h4>Humidity: {{ctrl.weather.main.humidity}} %</h4>
           <h4>Pressure: {{ctrl.weather.main.pressure}} hpa </h4>
 
- </div>
+ </div> -->
