delete function complete

--- a/public/angular_templates/moods.html.erb
+++ b/public/angular_templates/moods.html.erb
@@ -85,7 +85,8 @@
       <span ng-repeat="factor in m.factors">
         <h4>"{{factor.blurb}}"</h4>
       </span>
-      <a class="btn" ng-click="mood.deleteMood(m)">Delete</a><br>
+      <button type="button" ng-click="mood.deleteMood(m)">DELETE</button>
+      <br/>
 </div><br/>
 </div>
 </div>
