--- a/public/angular_templates/form.html.erb
+++ b/public/angular_templates/form.html.erb
@@ -188,7 +188,8 @@
     <textarea type="text"
               ng-model="mood.factorsBlurb"
               rows="5"
-              id="blurb">
+              id="blurb"
+              ng-maxlength= "50">
     </textarea>
 
   </div>
