more emojis added

--- a/public/angular_templates/form.html.erb
+++ b/public/angular_templates/form.html.erb
@@ -10,134 +10,226 @@
     <br/>
     <br/>
 
-<!-- one -->
-    <input id="one"
+<!-- SAD EMOTIONS -->
+    <input id="sad1"
            class="mood-select"
            type="radio"
            value="1"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood one"
-           for="one">
-      <img src="images/1.png"/>
+    <label class="mood"
+           for="sad1">
+      <img src="images/sad1.png"/>
     </label>
 
-
-<!-- two -->
-    <input id="two"
+    <input id="sad2"
            class="mood-select"
            type="radio"
            value="2"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood two"
-           for="two">
-      <img src="images/2.png"/>
+    <label class="mood"
+           for="sad2">
+      <img src="images/sad2.png"/>
     </label>
 
-
-<!-- three -->
-    <input id="three"
+    <input id="sad3"
            class="mood-select"
            type="radio"
            value="3"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood three"
-           for="three">
-      <img src="images/3.png"/>
+    <label class="mood"
+           for="sad3">
+      <img src="images/sad3.png"/>
     </label>
 
-<!-- four -->
-    <input id="four"
+    <input id="sad4"
            class="mood-select"
            type="radio"
            value="4"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood four"
-           for="four">
-      <img src="images/4.png"/>
+    <label class="mood"
+           for="sad4">
+      <img src="images/sad4.png"/>
     </label>
 
-
-<!-- five -->
-    <input id="five"
+    <input id="sad5"
            class="mood-select"
            type="radio"
            value="5"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood five"
-           for="five">
-      <img src="images/5.png"/>
+    <label class="mood"
+           for="sad5">
+      <img src="images/sad5.png"/>
     </label>
 
-
-<!-- six -->
-    <input id="six"
+    <input id="sad6"
            class="mood-select"
            type="radio"
            value="6"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood six"
-           for="six">
-      <img src="images/6.png"/>
+    <label class="mood"
+           for="sad6">
+      <img src="images/sad6.png"/>
     </label>
 
 
-<!-- seven -->
-    <input id="seven"
+
+<!-- ANGRY EMOTIONS -->
+    <input id="angry1"
            class="mood-select"
            type="radio"
            value="7"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood seven"
-           for="seven">
-      <img src="images/7.png"/>
+    <label class="mood"
+           for="angry1">
+      <img src="images/angry1.png"/>
     </label>
 
-
-<!-- eight -->
-    <input id="eight"
+    <input id="angry2"
            class="mood-select"
            type="radio"
            value="8"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood eight"
-           for="eight">
-      <img src="images/8.png"/>
+    <label class="mood"
+           for="angry2">
+      <img src="images/angry2.png"/>
     </label>
 
 
-<!-- nine -->
-    <input id="nine"
+<!-- NEUTRAL EMOTIONS -->
+    <input id="neutral1"
            class="mood-select"
            type="radio"
            value="9"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood nine"
-           for="nine">
-      <img src="images/9.png"/>
+    <label class="mood"
+           for="neutral1">
+      <img src="images/neutral1.png"/>
     </label>
 
-
-
-<!-- ten -->
-    <input id="ten"
+    <input id="neutral2"
            class="mood-select"
            type="radio"
            value="10"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood ten"
-           for="ten">
-      <img src="images/10.png"/>
+    <label class="mood"
+           for="neutra2l">
+      <img src="images/neutral2.png"/>
     </label>
+
+    <input id="neutral3"
+           class="mood-select"
+           type="radio"
+           value="11"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood"
+           for="neutral3">
+      <img src="images/neutral3.png"/>
+    </label>
+
+    <input id="neutral4"
+           class="mood-select"
+           type="radio"
+           value="12"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood"
+           for="neutral4">
+      <img src="images/neutral4.png"/>
+    </label>
+
+
+<!-- HAPPY EMOTIONS -->
+    <input id="happy1"
+           class="mood-select"
+           type="radio"
+           value="13"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood"
+           for="happy1">
+      <img src="images/happy1.png"/>
+    </label>
+
+    <input id="happy2"
+           class="mood-select"
+           type="radio"
+           value="14"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood"
+           for="happy2">
+      <img src="images/happy2.png"/>
+    </label>
+
+    <input id="happy3"
+           class="mood-select"
+           type="radio"
+           value="15"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood"
+           for="happy3">
+      <img src="images/happy3.png"/>
+    </label>
+
+    <input id="happy4"
+           class="mood-select"
+           type="radio"
+           value="16"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood"
+           for="happy4">
+      <img src="images/happy4.png"/>
+    </label>
+
+    <input id="happy5"
+           class="mood-select"
+           type="radio"
+           value="17"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood"
+           for="happy5">
+      <img src="images/happy5.png"/>
+    </label>
+
+    <input id="happy6"
+           class="mood-select"
+           type="radio"
+           value="18"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood"
+           for="happy6">
+      <img src="images/happy6.png"/>
+    </label>
+
+    <input id="happy7"
+           class="mood-select"
+           type="radio"
+           value="19"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood"
+           for="happy7">
+      <img src="images/happy7.png"/>
+    </label>
+
+
+
+
     <br/>
     <br/>
 </div>
@@ -145,10 +237,13 @@
 
 <!-- FACTORS FORM -->
 
-  <!-- Negative Emotions -->
+  <!-- Sad Emotions -->
   <div ng-show="mood.happiness == 1 ||
                 mood.happiness == 2 ||
-                mood.happiness == 3">
+                mood.happiness == 3 ||
+                mood.happiness == 4 ||
+                mood.happiness == 5 ||
+                mood.happiness == 6">
 
     Why are you feeling upset?<br/><br/>
 
@@ -161,10 +256,25 @@
   </div>
 
 
-  <!-- Neutral Emotions -->
-  <div ng-show="mood.happiness == 4 ||
-                mood.happiness == 5 ||
-                mood.happiness == 6">
+<!-- ANGRY EMOTIONS -->
+  <div ng-show="mood.happiness == 7 ||
+                mood.happiness == 8">
+
+    Why are you angry?<br/><br/>
+
+    <textarea type="text"
+              ng-model="mood.factorsBlurb"
+              rows="5"
+              id="blurb">
+    </textarea>
+
+  </div>
+
+<!-- NEUTRAL EMOTIONS -->
+  <div ng-show="mood.happiness == 9 ||
+                mood.happiness == 10 ||
+                mood.happiness == 11 ||
+                mood.happiness == 12">
 
     How could your day be better?<br/><br/>
 
@@ -176,23 +286,31 @@
 
   </div>
 
+<!-- HAPPY EMOTIONS -->
+    <div ng-show="mood.happiness == 13 ||
+                  mood.happiness == 14 ||
+                  mood.happiness == 15 ||
+                  mood.happiness == 16 ||
+                  mood.happiness == 17 ||
+                  mood.happiness == 18 ||
+                  mood.happiness == 19">
 
-  <!-- Positive Emotions -->
-  <div ng-show="mood.happiness == 7 ||
-                mood.happiness == 8 ||
-                mood.happiness == 9 ||
-                mood.happiness == 10">
+      What made your day awesome?<br/><br/>
 
-    Why was your day so awesome?<br/><br/>
+      <textarea type="text"
+                ng-model="mood.factorsBlurb"
+                rows="5"
+                id="blurb">
+      </textarea>
+    </div>
 
-    <textarea type="text"
-              ng-model="mood.factorsBlurb"
-              rows="5"
-              id="blurb"
-              ng-maxlength= "50">
-    </textarea>
 
   </div>
+
+
+
+
+
 <!-- END OF FACTORS FORM -->
 
 <!-- SUBMIT MOOD & FACTORS -->
