--- a/public/angular_templates/form.html.erb
+++ b/public/angular_templates/form.html.erb
@@ -252,6 +252,14 @@
               rows="5"
               id="blurb">
     </textarea>
+    <div>
+      <input ng-show="!!mood.happiness &&
+                      mood.factorsBlurb.length > 0"
+             type="submit"
+             value="Submit Your Mood"
+             id = "moodsubmit">
+    </form>
+    </div>
 
   </div>
 
@@ -267,6 +275,14 @@
               rows="5"
               id="blurb">
     </textarea>
+    <div>
+      <input ng-show="!!mood.happiness &&
+                      mood.factorsBlurb.length > 0"
+             type="submit"
+             value="Submit Your Mood"
+             id = "moodsubmit">
+    </form>
+    </div>
 
   </div>
 
@@ -283,6 +299,14 @@
               rows="5"
               id="blurb">
     </textarea>
+    <div>
+      <input ng-show="!!mood.happiness &&
+                      mood.factorsBlurb.length > 0"
+             type="submit"
+             value="Submit Your Mood"
+             id = "moodsubmit">
+    </form>
+    </div>
 
   </div>
 
@@ -302,6 +326,14 @@
                 rows="5"
                 id="blurb">
       </textarea>
+      <div>
+        <input ng-show="!!mood.happiness &&
+                        mood.factorsBlurb.length > 0"
+               type="submit"
+               value="Submit Your Mood"
+               id = "moodsubmit">
+      </form>
+      </div>
     </div>
 
 
@@ -313,14 +345,6 @@
 
 <!-- END OF FACTORS FORM -->
 
-<!-- SUBMIT MOOD & FACTORS -->
-  <input ng-show="!!mood.happiness &&
-                  mood.factorsBlurb.length > 0"
-         type="submit"
-         value="Submit Your Mood"
-         id = "moodsubmit">
-</form>
-</div>
 <!-- END OF FORMS -->
 
 <!-- Weather API Area -->
