--- a/app/views/layouts/angular.html.erb
+++ b/app/views/layouts/angular.html.erb
@@ -11,6 +11,7 @@
   <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
 
+
   <base href="/"> </base>
 
 </head>
@@ -40,15 +41,18 @@
             ng-model='ctrl.city'
             ng-submit="ctrl.getWeather()" /> <br>
      <button ng-click="ctrl.getWeather()">Get Weather</button>
-         <h2>Current Weather For: {{ctrl.weather.name}}</h2>
-           <h4>Description: {{ctrl.weather.weather[0].description}}</h4>
-        <h4>Temp: {{ctrl.weather.main.temp | kelvinToFar | number:1}} &deg; F / {{ctrl.weather.main.temp | kelvinToCelsius | number:1}} &deg; C </h4>
-         <h4>Humidity: {{ctrl.weather.main.humidity}} %</h4>
-         <h4>Pressure: {{ctrl.weather.main.pressure}} hpa </h4>
+         <h4>Current Weather For: {{ctrl.weather.name}}</h4>
+           <p>Description: {{ctrl.weather.weather[0].description}}</p>
+        <p>Temp:  {{ctrl.weather.main.temp}} &deg; F</p>
+         <p>Humidity: {{ctrl.weather.main.humidity}} %</p>
+         <p>Pressure: {{ctrl.weather.main.pressure}} hpa </p>
 
    </div>
+<div>
+  <bars-chart chart-data="myData" ></bars-chart>
+</div>
 
-<d3Graph></d3Graph>
+
      <%= yield %>
 
    <div ng-view>
@@ -57,9 +61,10 @@
 
 
 
+
+
   <%= javascript_include_tag 'angular', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'graph', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'weather', 'data-turbolinks-track' => true %>
+
 
 </body>
 </html>
