--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
   <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 </head>
-<body>
+<body class="entry">
 
   <nav class="front">
   <header ng-controller="HeaderController as header">
