--- a/app/views/layouts/angular.html.erb
+++ b/app/views/layouts/angular.html.erb
@@ -32,40 +32,10 @@
         <a href="/form" class="headerlink">POST YOUR MOOD</a> |
         <!-- see all mood posts -->
         <a href="/moods" class="headerlink">SEE YOUR MOODS</a> |
-        <!-- D3 Mood Chart -->
-        <a href="/chart" class="headerlink">MOOD CHART</a> |
-        <!-- user page -->
-        Welcome, <a href class="headerlink"="#">{{ header.current_user.email }}</a> </h1>
+
+        Welcome, {{ header.current_user.email }} </h1>
   </header>
   </nav>
-
-<!--
-  <div ng-controller="WeatherCtrl as ctrl">
-    <input type="text"
-            placeholder="enter your city"
-            ng-model='ctrl.city'
-            ng-submit="ctrl.getWeather()" /> <br>
-     <button ng-click="ctrl.getWeather()">Get Weather</button>
-         <h4>Current Weather For: {{ctrl.weather.name}}</h4>
-           <p>Description: {{ctrl.weather.weather[0].description}}</p>
-        <p>Temp:  {{ctrl.weather.main.temp}} &deg; F</p>
-         <p>Humidity: {{ctrl.weather.main.humidity}} %</p>
-         <p>Pressure: {{ctrl.weather.main.pressure}} hpa </p>
-
-   </div>
-<div>
-  <bars-chart chart-data="myData" ></bars-chart>
-</div> -->
-
-
-     <%= yield %>
-
-   <div ng-view>
-
-  </div>
-
-
-
 
 
   <%= yield %>
