css logo fade in

--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -19,7 +19,7 @@
 
         <span class="sensus">S E N S U S</span>
         <br/>
-        <div id="logo">
+        <div id="rainbow">
           <%= image_tag "logo.png" %>
         </div>
         <!-- new mood post -->
