--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -1,8 +1,8 @@
 <html>
 <head>
   <title>SENSUS</title>
- <!--  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %> -->
-  <!-- <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %> -->
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %> 
+   <!-- <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %> -->
   <%= csrf_meta_tags %>
   <link rel="stylesheet" href="stylesheets/application.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
