--- a/app/views/layouts/angular.html.erb
+++ b/app/views/layouts/angular.html.erb
@@ -13,6 +13,9 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.min.js"></script>
 
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
 
 
   <base href="/"> </base>
@@ -31,9 +34,9 @@
         <!-- new mood post -->
         <a href="/form" class="headerlink">POST YOUR MOOD</a> |
         <!-- see all mood posts -->
-        <a href="/moods" class="headerlink">SEE YOUR MOODS</a> |
+        <a href="/moods" class="headerlink">SEE YOUR MOODS</a>
 
-        Welcome, {{ header.current_user.email }} </h1>
+        <h3>Welcome, {{ header.current_user.email }} </h3>
   </header>
   </nav>
 
