--- a/public/angular_templates/form.html.erb
+++ b/public/angular_templates/form.html.erb
@@ -122,7 +122,7 @@
            name="mood"
            ng-model = "mood.happiness"/>
     <label class="mood"
-           for="neutra2l">
+           for="neutral2">
       <img src="images/neutral2.png"/>
     </label>
 
