--- a/public/angular_templates/moods.html.erb
+++ b/public/angular_templates/moods.html.erb
@@ -1,17 +1,25 @@
-<div ng-controller="MoodController as mood">
-<div id = "showall">
+<div ng-controller="MoodController as mood" id = "showall">
 <div id="emoji"
      ng-repeat="m in mood.current_user_moods | orderBy: '-created_at'"
-     ng-style="m.happiness==1 && {'background-color':  '#80CCFF'} ||
-               m.happiness==2 && {'background-color':  '#00E5E6'} ||
-               m.happiness==3 && {'background-color':  '#FF5050'} ||
-               m.happiness==4 && {'background-color':  '#33CC33'} ||
-               m.happiness==5 && {'background-color':  '#6dd4b1'} ||
-               m.happiness==6 && {'background-color':  '#CC33FF'} ||
-               m.happiness==7 && {'background-color':  '#FFFF66'} ||
-               m.happiness==8 && {'background-color':  '#FF3399'} ||
-               m.happiness==9 && {'background-color':  '#66FF99'} ||
-               m.happiness==10 && {'background-color':  '#FFCCFF'}">
+     ng-style="m.happiness==1 && {'background-color':  '#99ffff'} ||
+               m.happiness==2 && {'background-color':  '#99e6ff'} ||
+               m.happiness==3 && {'background-color':  '#99ccff'} ||
+               m.happiness==4 && {'background-color':  '#0066cc'} ||
+               m.happiness==5 && {'background-color':  '#99b3ff'} ||
+               m.happiness==6 && {'background-color':  '#9999ff'} ||
+               m.happiness==7 && {'background-color':  '#b399ff'} ||
+               m.happiness==8 && {'background-color':  '#ff9999'} ||
+               m.happiness==9 && {'background-color':  '#e6ff99'} ||
+               m.happiness==10 && {'background-color':  '#ccff99'} ||
+               m.happiness==11 && {'background-color':  '#b3ff99'} ||
+               m.happiness==12 && {'background-color':  '#99ff99'} ||
+               m.happiness==13 && {'background-color':  '#ffcc99'} ||
+               m.happiness==14 && {'background-color':  '#ffe699'} ||
+               m.happiness==15 && {'background-color':  '#ff99ff'} ||
+               m.happiness==16 && {'background-color':  '#ff99e5'} ||
+               m.happiness==17 && {'background-color':  '#ff99cc'} ||
+               m.happiness==18 && {'background-color':  '#ff99b3'} ||
+               m.happiness==19 && {'background-color':  '#ffff99'}">
 
 
      <!-- POST DATE -->
@@ -119,15 +127,13 @@
 
 
       <!-- FACTORS -->
- 
+
     <span ng-repeat="factor in m.factors">
         <h4>"{{factor.blurb}}"</h4>
     </span>
     <button type="button" id = "delete" ng-click="mood.deleteMood(m)">DELETE</button>
     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
       <br/>
-</div><br/>
+<br/>
 </div>
-
 </div>
-
