--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -111,6 +111,10 @@ h4.welcome {
   color: #6dd4b1;
 }
 
+h3 {
+  font-family: 'Abel', sans-serif !important;
+}
+
 .front {
   /*border-bottom: 1px solid gray;*/
 }
@@ -145,6 +149,7 @@ header {
 
 .headerlink {
   font-family: 'Abel', sans-serif !important;
+  font-size: 24px;
   text-decoration: none;
   color: #6dd4b1;
   transition: all 0.2s linear;
@@ -268,13 +273,16 @@ input[type=radio] {
 
 /* STYLING OF MOOD & FACTORS POSTS*/
 #emoji {
-  margin-bottom: 20px;
-  border: 1px solid #6dd4b1;
+  margin-bottom: 10px;
   border-radius: 5px;
-  height: 250px;
-  width: 250px;
+  height: 275px;
+  width: 275px;
   text-align: center;
   padding-top: 1em;
   display: inline-block;
   margin-right: 10px;
+}
+
+#showall {
+  margin-left: 75px;
 }
