--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,9 +21,10 @@
 
 @import url(https://fonts.googleapis.com/css?family=Abel);
 
-@import 'bower_component_name/stylesheet'
+/*@import 'bower_component_name/stylesheet'*/
 
 /* GENERAL STYLING FOR EVERY PAGE */
+
 * {
   box-sizing: border-box;
 
